--- a/angular.json
+++ b/angular.json
@@ -104,6 +104,7 @@
       "path": "./target/angular/",
       "environment": "all"
     },
-    "packageManager": "npm"
+    "packageManager": "npm",
+    "analytics": "553a7908-fff8-4045-9bda-dc9210ff21da"
   }
 }
