--- a/package.json
+++ b/package.json
@@ -85,7 +85,9 @@
     "@fortawesome/free-solid-svg-icons": "6.2.0",
     "@ng-bootstrap/ng-bootstrap": "13.0.0",
     "@popperjs/core": "2.11.6",
-    "bootstrap": "5.2.0",
+    "boostrap": "^2.0.0",
+    "bootstrap": "^5.2.0",
+    "cd": "^0.3.3",
     "dayjs": "1.11.5",
     "ngx-infinite-scroll": "14.0.0",
     "ngx-webstorage": "10.0.1",
