change for entities grade,speciality,sector,educationlevel and certificate

--- a/package.json
+++ b/package.json
@@ -85,10 +85,12 @@
     "@fortawesome/free-solid-svg-icons": "6.2.0",
     "@ng-bootstrap/ng-bootstrap": "13.0.0",
     "@popperjs/core": "2.11.6",
+    "angular-smart-table": "^2.1.11",
     "boostrap": "^2.0.0",
     "bootstrap": "^5.2.0",
     "cd": "^0.3.3",
     "dayjs": "1.11.5",
+    "generator-jhipster-angular-material-integration": "^1.0.17",
     "ngx-infinite-scroll": "14.0.0",
     "ngx-webstorage": "10.0.1",
     "rxjs": "7.5.6",
